# splash

./: .clang-format  .gitignore  CMakeLists.txt  README.md  checklist.txt
lib/: CMakeLists.txt
lib/cmake/: FindLIBIGL.cmake
mpm/: CMakeLists.txt
mpm/src/: App.h  mpmHook.cpp  mpmHook.h  stats.h
mpm/src/app/: App.h  Benchmark.cpp  Benchmark.h  PhysicsHook.h  mpmHook.cpp  mpmHook.h
mpm/src/gui/: debugUI.cpp  debugUI.h  parametersUI.cpp  parametersUI.h  renderUI.cpp  renderUI.h  statsUI.cpp  statsUI.h  systemUI.cpp  systemUI.h  ui.cpp  ui.h
mpm/src/kernels/: interpolation.cpp  interpolation.h
mpm/src/models/: constitutiveModel.cpp  constitutiveModel.h  interpolation.h  modelType.h  sandModel.cpp  sandModel.h  snowModel.cpp  snowModel.h  waterModel.cpp  waterModel.h
mpm/src/settings/: constants.h  renderSettings.h  simParameters.h  stats.h  systemStart.h
mpm/src/solver/: interpolation.cpp  interpolation.h  ompAtomicSolver.cpp  ompAtomicSolver.h  ompBlockSolver.cpp  ompBlockSolver.h  ompGatherSolver.cpp  ompGatherSolver.h  ompPartitionSolver.cpp  ompPartitionSolver.h  ompSolver.cpp  ompSolver.h  serialImplicitCRSolver.cpp  serialImplicitCRSolver.h  serialImplicitSolver.cpp  serialImplicitSolver.h  serialSolver.cpp  serialSolver.h  solver.cpp  solver.h  solverImpOmpScatter.cpp  solverImpOmpScatter.h  solverOmp.cpp  solverOmp.h  solverOmpGather.cpp  solverOmpGather.h  solverOmpScatter.cpp  solverOmpScatter.h  solverOmpScatterReorder.cpp  solverOmpScatterReorder.h  solverStep.h  solverType.h  svd.h
mpm/src/state/: node.h  nodeBlock.h  particle.h  particleNodeLink.h  shape.cpp  shape.h  system.cpp  system.h  systemHelpers.h  systemSetup.cpp  systemSetup.h  systemShapes.h
mpm/src/tensor/: tensorHelpers.h
programs/: CMakeLists.txt  benchAtomic.cpp  benchGather.cpp  benchScatter.cpp  collide.cpp  column.cpp  fall.cpp  main.cpp  wall.cpp
